[package]
name = "kcp-tokio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async KCP protocol implementation based on tokio for reliable UDP communication"

[dependencies]
kcp-core = { path = "../kcp-core" }
kcp-sys = { path = "../kcp-sys" }
tokio = { version = "1", features = ["net", "rt", "time", "sync", "macros", "io-util"] }
bytes = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "throughput"
harness = false
